--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {},
   "devDependencies": {
     "faucet": "^0.0.1",
+    "babel-preset-es2015": "^6.9.0",
     "babel-tape-runner": "^2.0.1",
     "tape": "^4.6.0",
     "sinon": "^1.17.4"
